fix(Input): remove text-overflow: ellipsis; (#4515) (#4550)
* fix(Input): remove ellipsis

* fix(Input): remove unused class

---------

--- a/packages/vkui/src/components/Input/Input.module.css
+++ b/packages/vkui/src/components/Input/Input.module.css
@@ -22,7 +22,6 @@
   border: none;
   border-radius: inherit;
   appearance: none;
-  text-overflow: ellipsis;
   font-family: inherit;
   font-weight: var(--vkui--font_text--font_weight--regular);
   font-size: var(--vkui--font_text--font_size--regular);
@@ -66,8 +65,4 @@
 
 .Input__el:disabled::placeholder {
   color: var(--vkui--color_text_secondary);
-}
-
-.Input--align-left {
-  /* Пустой класс для CSS Modules (см. CONTRIBUTING.md)  */
 }
